force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_area__x/dw_ecard_app_ecard_discrepancy_area__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$ecard_discrepancy_area</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$ecard_discrepancy_area</externalName>
    <label>dw_ecard_app$ecard_discrepancy_area</label>
    <pluralLabel>dw_ecard_app$ecard_discrepancy_area</pluralLabel>
</CustomObject>