force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_area__x/fields/ecard_discrepancy_area_id__c.field-meta.xml
<CustomField>
    <fullName>ecard_discrepancy_area_id__c</fullName>
    <description>ecard_discrepancy_area_id</description>
    <externalDeveloperName>ecard_discrepancy_area_id</externalDeveloperName>
    <label>ecard_discrepancy_area_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>