force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_area__x/fields/modifiedby_id__c.field-meta.xml
<CustomField>
    <fullName>modifiedby_id__c</fullName>
    <description>modifiedby_id</description>
    <externalDeveloperName>modifiedby_id</externalDeveloperName>
    <label>modifiedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>