force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_area__x/fields/updated_by_user_id__c.field-meta.xml
<CustomField>
    <fullName>updated_by_user_id__c</fullName>
    <description>updated_by_user_id</description>
    <externalDeveloperName>updated_by_user_id</externalDeveloperName>
    <label>updated_by_user_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>